<resources>
    <string name="app_name">cuatroenraya</string>
    <string name="title">Conecta 4</string>
    <string name="finPartida">Fin de partida</string>
    <string name="menu">Menu</string>
    <string name="salir">Salir</string>
    <string name="nombreActual">Nombre actual</string>
    <string name="cambiar">Cambiar</string>
    <string name="unJugador">1 Jugador</string>
    <string name="dosJugadores">2 Jugadores</string>
    <string name="opciones">Opciones</string>
    <string name="cargar">Cargar</string>
    <string name="nuevaPartida">Nueva Partida</string>
    <string name="jugar">Jugar</string>
    <string name="chengePlayerChip">Cambiar de ficha</string>
    <string name="player1">Jugador 1</string>
    <string name="player2">Jugador 2</string>
    <string name="micropagos">Desbloquear más fichas</string>
    <string name="title_activity_chip_selector">ChipSelector</string>
    <string name="new_round">Nueva Partida</string>
    <string name="game_over_message">¿Quieres jugar otra partida </string>
    <string name="round_already_finished">Partida finalizada</string>
    <string name="round_restarted">Partida reiniciada</string>
    <string name="board_saved">Partida guardada</string>
    <string name="title_activity_login">Entrar</string>
    <string name="error_updating_round">Error actualizando la ronda</string>
    <string name="error_adding_round">Error anadiendo la ronda</string>
    <string name="PC_NAME">PC player</string>
    <string name="jugador_OPEN">jugador_OPEN</string>
    <string name="online_string">Online</string>
    <string name="mueve_string">Mueve</string>
    <string name="gana_string">Ganó</string>
    <string name="noTurno">No es tu turno</string>

    <!-- Strings related to Settings -->


    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="pref_title_game_level_list_title">Elige el tamaño del tablero</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_music">Sonido</string>
    <string name="pref_description_music">Animar las jugadas con sonidos</string>
    <string name="pref_title_display_name">Nombre del jugador</string>
    <string name="pref_default_display_name">Pedro Soria</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Logearse o registrarse</string>
    <string name="action_sign_in_short">Logearse</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_settings">title_activity_settings</string>

    <string name="action_register">Registrarse</string>
    <string name="cuentajugador">Cuenta del jugador</string>
    <string name="eligeTema">Elige el Tema de la aplicación</string>
    <string name="pruebaSetting">Esto es una prueba</string>
    <string name="settings_AjustesJuego">Ajustes del juego</string>
    <string name="settings_Sonido">Sonido</string>
    <string name="settings_Music">Music</string>
    <string name="eligeColor1">Elige color ficha 1</string>
    <string name="eligeColor2">Elige color ficha 2</string>

</resources>
