<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.GameOver">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="@string/finPartida"
                android:ems="10"
                android:id="@+id/mensajeFinPartida"/>
        <Space
                android:layout_width="10dp"
                android:layout_height="10dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/mensanjeGanador"/>
        <Space
                android:layout_width="20dp"
                android:layout_height="20dp"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/backMenuButton"
                    android:text="@string/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
            />
            <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
            <Button
                    android:id="@+id/exitButton"
                    android:text="@string/salir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
            />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>