<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Options">

    //https://developer.android.com/training/basics/firstapp/building-ui
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:paddingTop="20dp"
        >

            <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_revert"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
            />
        </RelativeLayout>

        <Space
                style="@style/bigSpace" />

        <TextView
                android:text="@string/player1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subtitle_size"
                android:id="@+id/player1" />
        <Space
                style="@style/mediumSpace" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp">


            <EditText
                    android:id="@+id/editTextPlayer1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreActual"/>
            <Space
                    android:layout_width="10dp"
                    android:layout_height="10dp" />
            <Button
                    android:id="@+id/changePlayer1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar"/>
        </LinearLayout>

        <Space
                style="@style/smallSpace" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

        <Button
                android:id="@+id/changePlayer1Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chengePlayerChip"/>
    </LinearLayout>



        <Space
                style="@style/bigSpace" />

        <TextView
                android:text="@string/player2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/subtitle_size"
                android:id="@+id/player2" />
        <Space
                style="@style/mediumSpace" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp">

            <EditText
                    android:id="@+id/editTextPlayer2Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreActual"/>
            <Space
                    style="@style/smallSpace" />
            <Button
                    android:id="@+id/changePlayer2Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cambiar"/>
        </LinearLayout>

        <Space
                style="@style/smallSpace" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp">

            <Button
                    android:id="@+id/changePlayer2Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chengePlayerChip"/>
        </LinearLayout>
        <Space
                style="@style/bigSpace" />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp">

            <Button
                    android:id="@+id/micropagos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/micropagos"/>
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>